Migrated from Spring Boot to Quarkus